# VLA-from-FastVLM

./: .gitignore  LICENSE  README.md  README_JP.md  USE_WITH_LEROBOT_FASTVLA.md  eval_log.txt  infer_expert.py  latent_expert.py  log_lerobot_installation.md  original.py  pyproject.toml  requirements.txt  ros2_node.py  train_expert.py
configs/: train_aloha.yaml
data/: scaler.json  train.jsonl  val.jsonl
outputs/: latent_cat.pt
runs/exp1/: best.pt  last.pt
scripts/: download_fastvlm.sh  eval_dataset.py  run_real.py  run_sim.py  train.py
src/vla_fastvlm/: __init__.py  device.py
src/vla_fastvlm/data/: __init__.py  aloha_dataset.py
src/vla_fastvlm/fastvla/: __init__.py  configuration_fastvla.py  fastvlm_with_expert.py  modeling_fastvla.py  processor_fastvla.py
src/vla_fastvlm/lerobot_fastvla/: __init__.py  configuration_fastvla.py  modeling_fastvla.py  processor_fastvla.py
src/vla_fastvlm/model/: __init__.py  fastvlm_adapter.py  policy.py
src/vla_fastvlm/real/: __init__.py  aloha.py
src/vla_fastvlm/sim/: __init__.py  aloha.py
src/vla_fastvlm/training/: __init__.py  trainer.py
src/vla_fastvlm/utils/: __init__.py  checkpoint.py  logging.py
