[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vla-fastvlm"
version = "0.1.0"
description = "Vision-Language-Action pipeline built on top of Apple's FastVLM models for Aloha manipulation tasks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Syun Robotics Lab" }
]
keywords = ["robotics", "vision-language-action", "fastvlm", "reinforcement-learning", "lerobot", "aloha"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "accelerate",
    "datasets",
    "einops",
    "gymnasium",
    "huggingface-hub",
    "imageio",
    "mujoco",
    "numpy",
    "pillow",
    "pyyaml",
    "torch",
    "torchvision",
    "transformers",
    "tqdm",
    "tyro",
    "timm",
]

[project.optional-dependencies]
sim = [
    "gym-aloha",
    "moviepy",
]
real = [
    "hidapi",
    "pyserial",
]
dev = [
    "black",
    "ruff",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E501"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
